Updated Model to remove facebook option from Friend

--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -152,10 +152,7 @@
              <p class = "text-muted" style="padding-top: 1em">Are there any ingredients you would like to avoid eating?</p>
              <p><button type="button" class="btn btn-primary" href="#" data-toggle="modal" data-target="#addAvoidModal">Add Ingredients to Avoid</button>&ensp;<span style="display: none" class="alert alert-success glyphicon glyphicon-ok" id="avoid-success"></span></p>
 
-            <div class="row"
-                <div class="col">
-                    <a href="/auth/clear" role="button" title="Removes everything you have added to your profile, for a fresh start" class="btn btn-xs btn-warning pull-right">start over</a>
-                </div>
+            <div class="row">
                 <div class="col">
                     <input type="submit" class="btn btn-success btn-lg pull" value="Register">
                 </div>
