--- a/app/templates/spoonacular/recipe_search.html
+++ b/app/templates/spoonacular/recipe_search.html
@@ -45,12 +45,12 @@
                 <div class="checkbox">
                     <label>
                         <input type="checkbox" class="alertme" name="diets" value="{{  diet }}" checked><strong>{{  diet|capitalize  }}</strong><br>
-                        {% for guest in party.guest_profiles %}{% if guest.diet.diet_type == diet %}
+                        {% for guest in party.guests %}{% if guest.profiles.diet.diet_type == diet %}
 
 
-                        <a href="#" data-toggle="tooltip" title="Reason: {{  guest.diet_reason}}">
+                        <a href="#" data-toggle="tooltip" data-placement="right" title="Reason: {{  guest.profiles.diet_reason}}">
 
-                            {{  guest.first_name  }} {{  guest.last_name  }}</a><br>{% endif %}{% endfor %}
+                            {{  guest.profiles.first_name  }} {{  guest.profiles.last_name  }}</a><br>{% endif %}{% endfor %}
                             
                         </label><br>
                         
@@ -62,11 +62,11 @@
                         {% for intol in party_intols %}                 
                         <label>
                             <input type="checkbox" class="alertme" name="intols" value="{{  intol }}" checked><strong>{{  intol|capitalize  }}</strong><br>
-                            {% for guest in party.guest_profiles %}
-                            {% for intolerance in guest.intolerances %}
+                            {% for guest in party.guests %}
+                            {% for intolerance in guest.profiles.intolerances %}
                             {% if intolerance.intol_name == intol %}
-                            <a href="#" data-toggle="tooltip" title="No reasons are collected for Intolerances/Allergies because the reason is always the same, these things will make your guest very sick. Tread carefully. It may be enough to have seperate dishes and it may not.">
-                                {{  guest.first_name  }} {{  guest.last_name  }}</a><br>
+                            <a href="#" data-toggle="tooltip" data-placement="right" title="No reasons are collected for Intolerances/Allergies because the reason is always the same, these things will make your guest very sick. Tread carefully. It may be enough to have seperate dishes and it may not.">
+                                {{  guest.profiles.first_name  }} {{  guest.profiles.last_name  }}</a><br>
                                 {% endif %}
                                 {% endfor %}    
                                 {% endfor %}
@@ -82,12 +82,12 @@
                             {% for avoid in party_avoids %}                 
                             <label>
                                 <input type="checkbox" name="avoids" class="alertme" value="{{  avoid }}" checked><strong>{{  avoid|capitalize  }}</strong><br>
-                                {% for guest in party.guest_profiles %}
-                                {% for guestavoid in guest.avoidances %}
+                                {% for guest in party.guests %}
+                                {% for guestavoid in guest.profiles.avoidances %}
                                 
                                 {% if guestavoid.ingredient == avoid %}
                                 
-                                <a href="#" data-toggle="tooltip" title="{{  guestavoid.reason  }}">{{  guest.first_name  }} {{  guest.last_name  }}</a>{% if not loop.last %}, {% endif %}
+                                <a href="#" data-toggle="tooltip" data-placement="right" title="{{  guestavoid.reason  }}">{{  guest.profiles.first_name  }} {{  guest.profiles.last_name  }}</a>{% if not loop.last %}, {% endif %}
                                 {% endif %}
                                 {% endfor %}    
                                 {% endfor %}
@@ -109,7 +109,7 @@
 
                 {% for i in range(result_number) %}
                 <div class="col-md-6 recipe">
-                    <h4><a href="#" data-toggle="tooltip" title="{{  responses['response'][i].get('title')  }}" >{{  responses['response'][i].get('title')|truncate(39, end=" (...)") }}</a></h4>
+                    <h4><a href="#" data-toggle="tooltip" data-placement="right" title="{{  responses['response'][i].get('title')  }}" >{{  responses['response'][i].get('title')|truncate(39, end=" (...)") }}</a></h4>
                     <form action="/spoonacular/see_recipe" method="POST">
                         <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
                         <input type="hidden" name="intols" value="{{  intols  }}">
